--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml.css
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml.css
@@ -1,6 +1,21 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+.layout-frame {
+    height: 100%;
+    overflow: hidden; /* Prevent scrollbars on the frame */
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
